--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg justify-content-center">
-        <a class="navbar-brand mx-auto  text-white" href="#"><h1>PORTAFOLIO DE EVIDENCIAS DEL ALUMNO JARED MENDEZ VALENCIA</h1></a>
-    </nav>
-
     <div class="container-fluid">
+        <div class="mx-auto"><h1>PORTAFOLIO DE EVIDENCIAS</h1><br> ALUMNO: JARED MENDEZ VALENCIA</div> 
+
 
         <div class="row mt-3">
             <div class="col-md-3">
@@ -134,7 +132,7 @@
                     <div class="card-header bg-transparent border-info text-info">TABLAS 2</div>
                     <div class="card-body text-info">
                         <p class="card-text">Este programa crea una tabla de multiplicar con el numero que el ususario desee.</p>
-                        <a href="#" class="btn btn-info">Haz clic aquí</a>
+                        <a href="multi/index.html" class="btn btn-info">Haz clic aquí</a>
                     </div>
                 </div>
             </div>
@@ -226,6 +224,8 @@
                 </div>
             </div>
         </div>
+
+
         <div class="row mt-3">
             <div class="col-md-3">
                 <div class="card border-info mb-3" style="height: 250px;">
@@ -247,15 +247,6 @@
             </div>
             <div class="col-md-3">
                 <div class="card border-info mb-3" style="height: 250px;">
-                    <div class="card-header bg-transparent border-info text-info">TABLAS 2</div>
-                    <div class="card-body text-info">
-                        <p class="card-text">Este programa crea una tabla de multiplicar con el numero que el ususario desee.</p>
-                        <a href="#" class="btn btn-info">Haz clic aquí</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card border-info mb-3" style="height: 250px;">
                     <div class="card-header bg-transparent border-info text-info ">JOSE</div>
                     <div class="card-body text-info">
                         <p class="card-text">Este programa ayuda a saber que sembrar a jose.</p>
@@ -263,7 +254,17 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-3">
+                <div class="card border-info mb-3" style="height: 250px;">
+                    <div class="card-header bg-transparent border-info text-info">Fibonacci a partir de un numero</div>
+                    <div class="card-body text-info">
+                        <p class="card-text">Este código crea una calculadora que genera la serie de Fibonacci con la cantidad de términos especificada por el usuario.</p>
+                        <a href="fibonacci2/ejercicio11.html" class="btn btn-info">Entrar</a>
+                    </div>
+                </div>
+            </div>
         </div>
+
 
         <div class="row mt-3">
             <div class="col-md-3">
@@ -302,19 +303,9 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row mt-3">
-            <div class="col-md-3">
-                <div class="card border-info mb-3" style="height: 250px;">
-                    <div class="card-header bg-transparent border-info text-info">Fibonacci a partir de un numero</div>
-                    <div class="card-body text-info">
-                        <p class="card-text">Este código crea una calculadora que genera la serie de Fibonacci con la cantidad de términos especificada por el usuario.</p>
-                        <a href="fibonacci2/ejercicio11.html" class="btn btn-info">Entrar</a>
-                    </div>
-                </div>
-            </div>
         </div>
+       
 
     </div>
 </body>
