--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="card-header bg-transparent border-info text-info">TABLAS 2</div>
                     <div class="card-body text-info">
                         <p class="card-text">Este programa crea una tabla de multiplicar con el numero que el ususario desee.</p>
-                        <a href="multi/index.html" class="btn btn-info">Haz clic aquí</a>
+                        <a href="multi/index.html" class="btn btn-info">Entrar</a>
                     </div>
                 </div>
             </div>
